# Damiao-Motor

./: README.md  run.sh  runMotionControl.sh
API/: CMakeLists.txt
API/include/: handler.h  pdtMotor.h  robotCommand.lcm  robotState.lcm
API/include/robotCommand/: robotCommand.hpp
API/include/robotState/: robotState.hpp
API/src/: ReceiveTest.cpp  SendTest.cpp  handler.cpp  motionCalculate.cpp  motionCtl.cpp  mtct_for_cmpltsub.cpp  oneThreadTest.cpp  oneThreadTest2.cpp  pdtMotor.cpp  priThreadTest.cpp  test.cpp  testRecv.cpp  threadTest.cpp  twoThreadTest.cpp
